feature/conluz-125 to main (#126)
* [conluz-125] Performend first set of changes

* [conluz-125] Upgraded dependencies to latests version to avoid vulnerabilities

* [conluz-125] Fixed promtail version

* [conluz-125] Fixed compilation error building the client. Added error control when an exception is thrown when closing connection

* [conluz-125] Changed organization property

* [conluz-125] Created scripts to export from influxdb 1.8 to influxdb 3

* [conlyz-125] Fully implmeneted repos to use influxdb3

* [conluz-125] Configured BaseIntegrationTest to run an influxdb core 3 container. Removed duplicity on beans with influx and influx3, removing the ones for influx 1.8. Added exclusion with JVM args for Apache Arrow

* [conluz-125] Fixed repositories migrated to influx 3

* [conluz-125] Refactorized the remaining Influx DB repositories to use version 3. Removed references to old code pointing to InfluxDB 1.8

* [conluz-125] Replaced string literals for duration by constants

* [conluz-125] Configured influxdb3-core service to run

* [conluz-125] Renamed nodeId for influxdb3 tests and decreased log level to debug

* [conluz-125] Updated documentation about how to run and configure influxdb3-core

* [conluz-125] Configured and documented influxdb explorer

* [conluz-125] Configured env vars to connect with influxDB3 and added this service as a dependency of conluz

* [conluz-125] Fixed scripts to export data from influxdb 1.8 and import to influxdb3

* [conluz-125] Configured telegraf to use influxdb3

* [conluz-125] Creatd orchestrator script to automate the migration. Fixed issues reading lp files with metadata